--- a/ENTRYPOINT/Dockerfile
+++ b/ENTRYPOINT/Dockerfile
@@ -1,4 +1,5 @@
 FROM almalinux:9
 #CMD ["ping", "google.com"]
-CMD ["google.com"]
+CMD ["http://google.com"]
+#CMD ["google.com"]
 ENTRYPOINT ["ping"]
